--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
       }
     ]
   },
+  "paths": {
+    "@/*": [
+      "./src/*"
+    ]
+  },
   "include": [
     "next-env.d.ts",
     ".next/types/**/*.ts",
